# argan

./: .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: CI.yml
argan-core/: Cargo.toml  README.md
argan-core/src/: body.rs  extensions.rs  http.rs  lib.rs  macros.rs
argan-core/src/request/: impls.rs  mod.rs
argan-core/src/response/: error.rs  impls.rs  mod.rs
benches/: request_routing.rs
docs/: argan.md  response.md  server.md
docs/data/: form.md  json.md
src/: body.rs  extension.rs  handler.rs  header.rs  http.rs  lib.rs  macros.rs  matcher.rs  pattern.rs  prelude.rs  request.rs  resource.rs  response.rs  routing.rs  server.rs  service.rs  utils.rs
src/common/: config.rs  header_utils.rs  macros.rs  mod.rs  node_properties.rs  test_helpers.rs  timer.rs
src/data/: cookie.rs  cookies.rs  extensions.rs  form.rs  header.rs  json.rs  mod.rs  multipart_form.rs  path_param.rs
src/data/path_param/: mod.rs
src/data/path_param/deserializers/: from_param.rs  from_path.rs  from_path_params.rs  from_segment_params.rs  mod.rs
src/handler/: futures.rs  implementation.rs  impls.rs  kind.rs  mod.rs  request_handler.rs  request_handlers.rs
src/host/: mod.rs  service.rs
src/middleware/: impls.rs  internal.rs  layer_targets.rs  mod.rs  targets.rs
src/pattern/: mod.rs  param.rs
src/pattern/deserializer/: from_params.rs  from_params_list.rs  mod.rs
src/pattern/deserializers/: from_param.rs  from_params.rs  from_params_list.rs  from_segment.rs  mod.rs
src/request/: extractors.rs  mod.rs  routing.rs  websocket.rs
src/resource/: config.rs  extension.rs  futures.rs  layer_targets.rs  mod.rs  service.rs  static_files.rs
src/response/: error.rs  event_stream.rs  file_stream.rs  mod.rs
src/response/file_stream/: config.rs  mod.rs  properties.rs
src/response/stream/: event.rs  file.rs  mod.rs
src/response/stream/file/: config.rs  mod.rs
src/router/: mod.rs  service.rs
