[workspace]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
futures-util = "0.3"
thiserror = "1"
mime = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[package]
name = "argan"
version = "0.0.0"
description = "Experiment."
authors = ["Shohruh Adham <shohruh.adham@gmail.com>"]
license.workspace = true
edition.workspace = true

[features]
cookies = ["dep:cookie"]
private-cookies = ["cookies", "cookie/private", "cookie/key-expansion"]
signed-cookies = ["cookies", "cookie/signed", "cookie/key-expansion"]
query-params = ["dep:serde_urlencoded"]
json = ["dep:serde_json", "multer/json"]
form = ["dep:serde_urlencoded"]
multipart-form = ["dep:multer"]
full = [
	"regex",
	"private-cookies",
	"signed-cookies",
	"query-params",
	"json",
	"form",
	"multipart-form",
]
# default = ["full"]

[dependencies]
argan-core = { version = "0.0.0", path = "argan-core" }
bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
futures-util = { workspace = true }
thiserror = {workspace = true}
mime = { workspace = true }
base64 = "0.22"
fastwebsockets = { version = "0.7", features = ["upgrade"] }
flate2 = "1"
httparse = "1"
httpdate = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
mime_guess = "2"
percent-encoding = "2"
pin-project = "1"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-layer = "0.3"
tower-service = "0.3"

# optional
regex = { version = "1", optional = true }
cookie = { version = "0.18", features = ["percent-encode"], optional = true }
serde_json = { version = "1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
multer = { version = "3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "parking_lot"] }
criterion = { version = "0.5", features = ["async_tokio"] }
tower-http = { version = "0.5", features = ["compression-gzip"] }

[[bench]]
name = "request_routing"
harness = false

