[package]
name = "argan-core"
version = "0.1.0"
description = "Core types and traits for the Argan Web Framework."
authors = ["Shohruh Adham"]
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository = "https://github.com/argan-rs/argan"
readme = "README.md"

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
mime = { workspace = true }

[lints]
workspace = true
